--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,13 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 body {
-  font-family: 'Roboto', sans-serif
+  font-family: 'Merriweather', serif
 }
 .cursive {
   font-family: 'Dancing Script', cursive;
-}
-
-.merriweather {
-  font-family: 'Merriweather', serif;
 }
 
